# auto-default

./: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
src/: lib.rs
tests/: compile_fail.rs  default.rs  empty.rs  enum_shape.rs  mixed.rs  nested_skip.rs  no_default.rs  vis.rs
tests/compile_fail/: arguments.rs  arguments.stderr  invalid_item.rs  invalid_item.stderr  no_impl_default.rs  no_impl_default.stderr  skip_attr.rs  skip_attr.stderr  skip_container.rs  skip_container.stderr  skip_default.rs  skip_default.stderr  skip_invalid.rs  skip_invalid.stderr  skip_wrong.rs  skip_wrong.stderr  two_skips.rs  two_skips.stderr
